Reorganize project structure and update contact email
- Update contact email to amogh.thodati2@gmail.com
- Organize files into proper folders:
  - src/pages/ for HTML files
  - src/scripts/ for JavaScript files
  - src/styles/ for CSS files
  - assets/images/ for image files
  - assets/fonts/ for font files
- Update manifest.json to reflect new file paths
- Update all HTML files with correct relative paths
- Update README with new organized structure

--- a/manifest.json
+++ b/manifest.json
@@ -11,29 +11,29 @@
     "scripting"
   ],
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "src/pages/popup.html",
     "default_icon": {
-      "16": "icon.png",
-      "48": "icon.png",
-      "128": "icon.png"
+      "16": "assets/images/icon.png",
+      "48": "assets/images/icon.png",
+      "128": "assets/images/icon.png"
     }
   },
   "icons": {
-    "16": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
+    "16": "assets/images/icon.png",
+    "48": "assets/images/icon.png",
+    "128": "assets/images/icon.png"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "src/scripts/background.js"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScript.js"]
+      "js": ["src/scripts/contentScript.js"]
     },
     {
       "matches": ["*://*/*.html*", "*://*/news/*", "*://*/2024/*", "*://*/politics/*"],
-      "js": ["contentScript4.js"]
+      "js": ["src/scripts/contentScript4.js"]
     }
   ]
 }
